# Agentic_RAG_Group1

./: .env.example  .gitignore  AGENTS.md  Explain.md  Link_data.txt  README.md  Worklog.md  car_deposit.json  car_deposit_raw.js  debug_output.md  demo_graph.md  demo_rag.py  graph_multihop.csv  graph_multihop.jsonl  multihop.csv  multihop.jsonl  presentation.html  presentation_graphrag.html  pyproject.toml  requirements-dev.txt  requirements.txt  search_output.txt  test_bge.py
benchmark/: chunking_report.md  vinfast_chunking_benchmark.py  vinfast_chunking_questions.json
docs/: agentic-rag-handover.md  ai-collaboration-guide.md  coding-standards.md  generation-ui-guide.md  git-workflow.md  graphrag-research-and-integration-plan.md  ingestion.md  integration-strategy.md  knowledge-quality-conflict-detection.md  manual.md  metadata-flows-and-toggles.md  metadata-schema.md  metadata-storage.md  model-runtime-configuration.md  module-contracts.md  neo4j-setup-guide.md  offline-ingestion-and-online-search.md  pdf-parser-landscape.md  ragflow-lightning-local-guide.md  retrieval-rerank-architecture.md  s3-access-management.md  slide-tuan.html  theory-comments-summary.md  todo-work-assignment.md  url-ingestion-benchmarking.md  url-ingestion.md
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
guide/: README.md  agentic-rag-pipeline-report.md  crawl-diagnosis.skill  crawl-shell-timeout-fix.md  dedup-detect-implementation-report.md  dom-aware-chunking-strategy.md  duplicate-detection-guide.md  duplicate_detection_latency_relevance_strategy.md  guide.md  knowledge-quality-conflict-detection-guide.md  rag_ingestion_architecture_notes (1).md  starting-point.md  tai_lieu_check_duplicate_4_phuong_phap.docx  url-css-html-dynamic-implementation-decision-plan.md  url-css-html-dynamic-markdown-guide.md  url-ingestion-guide.md
guide_2/: Manual.md  README.md  TODO.md  TODO_Gemini.md  TODO_Gemini_Pro.md  missing implementation.md  replacement-map.md  test_prompts.md  tool-choice-matrix.md  verify_file_ingestion.py  verify_url_ingestion.py  vinfast_pipeline_implementation.md  vinfast_pipeline_todo.md
guide_RAG/: GUIDELINE.md
kg/: README.md  __init__.py  architecture_html.py  canonicalize.py  concurrency.py  demo.py  embeddings.py  extract.py  gates.py  llm.py  merge.py  pipeline.py  resolve.py  retrieve.py  run_real.py  s3_loader.py  sample_data.py  schema.py  stage.py  staging_neon.py  store.py  store_neo4j.py  visualize.py
presentation/: index.html
scripts/: backfill_dedup.py  backfill_entity_canonical.py  backfill_metadata.py  build_entity_map.py  build_filter_allowlist.py  build_final.py  build_question_index.py  bulk_upload.py  check_coverage.py  check_missing_chunks.py  cleanup_xlsx_relink.py  demo_entity_normalizer.py  dump_canonical_coverage.py  dump_entity_groups.py  dump_entity_report.py  dump_entity_stats.py  ingest_test_links.py  make_benchmark_50.py  migrate_add_coverage_multihop.sql  migrate_dataset_fk_set_null.sql  migrate_excel_to_neon.py  migrate_frozen_question_ids.sql  rerun_failed_questions.py  restore_result_xlsx.py  reupsert_sparse.py  run_evaluation.py  run_retrieval_ablation_issue153.py  scan_conflicts.py  setup_eval_db.sql  sync_to_neo4j.py  upload_monitor.py
slides/: graphrag.html
src/agentic_rag/ingestion/url/: README.md  TODO_LLM.md  TODO_dedup.md  TODO_meta_filter.md  TODO_rulebased.md  TODO_scripts.md  Worklog.md  __init__.py  artifact.py  chunking.py  crawler.py  extractor.py  llm_enrichment.py  loader.py  metadata-requirement-strategy.md  metadata_explained.md  model_chunking.py  normalizer.py  parser.py  probe.py  pyproject.toml  schema.md
src/agentic_rag/ingestion/url/acquisition/: README.md  __init__.py  fetcher.py
src/agentic_rag/ingestion/url/benchmarking/: __init__.py  cli.py  custom_benchmark.py  famous_benchmark.py
src/agentic_rag/ingestion/url/chunking/: __init__.py  core.py  markdown.py  rag.py  token.py
src/agentic_rag/ingestion/url/data/: .gitignore
src/agentic_rag/ingestion/url/dom/: README.md  __init__.py  blocks.py  entities.py  visual_semantics.py
src/agentic_rag/ingestion/url/entities/: README.md  __init__.py  extractor.py
src/agentic_rag/ingestion/url/evaluation/: README.md  __init__.py  runner.py  scoring.py
src/agentic_rag/ingestion/url/golden_data/: README.md  ground_truth_manifest.json  judge_prompt_trang_vinfast_vn.txt  promt_judge_VF9_rolling_cost.txt  trang_vinfast_vn.json  vinfast_evaluation.md  vinfast_url_golden_samples.json  vinfast_vf9_rolling_cost_ground_truth.json
src/agentic_rag/ingestion/url/golden_data/advanced_template/: advanced_scorecard.json  review.md
src/agentic_rag/ingestion/url/golden_data/template/: expected_chunks.json  review.md  source.html
src/agentic_rag/ingestion/url/interactions/: README.md  __init__.py  artifacts.py  extractor.py  models.py  playwright.py  profile.py  runner.py  traversal.py
src/agentic_rag/ingestion/url/llm_review/: __init__.py  models.py  reviewer.py  validation.py
src/agentic_rag/ingestion/url/metadata/: README.md  __init__.py  enrichment.py
src/agentic_rag/ingestion/url/prompts/: fallback_extraction_prompt.txt
src/agentic_rag/ingestion/url/quality/: README.md  __init__.py  diagnostics.py  strategy.py
src/agentic_rag/ingestion/url/rendering/: README.md  __init__.py  browser.py
src/agentic_rag/ingestion/url/tests/: __init__.py  test_acquisition_rendering_quality.py  test_artifact.py  test_chunking.py  test_crawler.py  test_dom_entities_metadata.py  test_evaluation.py  test_evaluation_runner.py  test_extractor.py  test_interactions.py  test_loader.py  test_markdown_chunking.py  test_model_chunking.py  test_parser.py  test_probe.py  test_rag_chunking.py  test_state_graph_contract.py  test_url_package_exports.py  test_visual_semantics.py
src/agentic_rag/ingestion/url/tests/benchmarking/: test_benchmarking_package_exports.py  test_cli.py  test_custom_benchmark.py
tests/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_agent_sufficiency.py  test_api.py  test_autodata_worker_toggles.py  test_llm.py  (+41 more)
(+3259 files in other folders)
