[project]
name = "agentic-rag-group1"
version = "0.1.0"
description = "Stack-neutral scaffold for the Agentic RAG Group 1 implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2,<3",
    "faiss-cpu==1.13.2",
    "fastapi>=0.115.0,<1",
    "langchain-community==0.4.1",
    "langchain-openai>=1.1.9",
    "openai>=1.0.0,<2",
    "pydantic>=2,<3",
    "python-multipart>=0.0.20,<1",
    "rank-bm25==0.2.2",
    "uvicorn>=0.30.0,<1",
]

[project.optional-dependencies]
rerank = [
    "sentence-transformers>=5,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "src/agentic_rag/ingestion/pdf/tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["rank_bm25.*"]
follow_untyped_imports = true
