[project]
name = "agentic-rag-group1"
version = "0.1.0"
description = "Stack-neutral scaffold for the Agentic RAG Group 1 implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2,<3",
    "fastapi>=0.115.0,<1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.9",
    "langchain-postgres>=0.0.17",
    "langgraph>=0.2",
    "openai>=1.0.0,<2",
    "pydantic>=2,<3",
    "python-multipart>=0.0.20,<1",
    "pysbd>=0.3.4,<1",
    "rank-bm25==0.2.2",
    "tiktoken>=0.9.0,<1",
    "trafilatura>=2.0.0,<3",
    "turbovec>=0.7.0",
    "uvicorn>=0.30.0,<1",
    "langchain-community>=0.4.2",
    "ragas>=0.2",
    "langchain-google-vertexai>=3.2.3",
]

[project.optional-dependencies]
evaluation = [
    "ragas>=0.1.0",
    "datasets",
    "openpyxl>=3.1.0",
]
observability = [
    "langsmith>=0.4,<1",
]
rerank = [
    "sentence-transformers>=5,<6",
    "torch>=2.12,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

# Windows + Python 3.12 uses the CUDA 12.6 build; other platforms (CI/Linux) and
# other Python versions fall back to PyPI.
[tool.uv.sources]
torch = [
    { url = "https://download.pytorch.org/whl/cu126/torch-2.12.0%2Bcu126-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32' and python_full_version >= '3.12' and python_full_version < '3.13'" },
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "src/agentic_rag/ingestion/pdf/tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "rank_bm25.*",
    "turbovec.*",
    "langchain_huggingface.*",
    "langchain_postgres.*",
    "langgraph.*",
    "langsmith.*",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["ragas", "ragas.*", "datasets", "datasets.*"]
ignore_missing_imports = true
