[project]
name = "agentic-rag-group1"
version = "0.1.0"
description = "Stack-neutral scaffold for the Agentic RAG Group 1 implementation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core runtime/contracts
    "langgraph>=0.2",
    "litellm==1.83.13",
    "pydantic>=2,<3",
    # API server
    "fastapi>=0.115.0,<1",
    "python-multipart>=0.0.20,<1",
    "uvicorn>=0.30.0,<1",
    # Ingestion
    "docling>=2,<3",
    "playwright>=1.60.0",
    "pysbd>=0.3.4,<1",
    "tiktoken>=0.9.0,<1",
    "trafilatura>=2.0.0,<3",
    # Retrieval/vector stores
    "langchain-postgres>=0.0.17",
    "qdrant-client>=1.12,<2",
    "rank-bm25==0.2.2",
    "turbovec>=0.7.0",
    # Storage/cloud adapters
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
# Evaluation workbook tooling and deferred RAGAS dependencies.
evaluation = [
    "datasets",
    "langchain-community",
    "openpyxl>=3.1.0",
    "ragas>=0.2",
]

# LangSmith trace integration.
observability = [
    "langsmith>=0.4,<1",
]

# Local HuggingFace embedding and sentence-transformers reranker. Torch build
# selection is machine-specific; do not pin CUDA wheels in project metadata.
local-models = [
    "sentence-transformers>=5,<6",
    "torch>=2.5,<3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
]
ignore = []

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests", "src/agentic_rag/ingestion/pdf/tests"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "langchain_postgres.*",
    "langgraph.*",
    "langsmith.*",
    "qdrant_client.*",
    "rank_bm25.*",
    "turbovec.*",
]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["ragas", "ragas.*", "datasets", "datasets.*", "langchain_openai", "langchain_openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openpyxl", "openpyxl.*"]
ignore_missing_imports = true
